modules/gdscript/tests/scripts/analyzer/errors/typed_array_pass_differently_to_typed.gd
func expect_typed(typed: Array[int]):
	print(typed.size())

func test():
	var differently: Array[float] = [1.0]
	expect_typed(differently)
	print('not ok')
